need to add gap, corrected jutifying center error

--- a/src/component/Offer.css
+++ b/src/component/Offer.css
@@ -17,7 +17,7 @@
     border-width: 2px;
     border-style: solid;
 
-    gap: 2rem;
+    /* gap: 2rem; */
     font-weight: 500;
 }
 
